# libshambles

./: Makefile  README.md  TODO  build-test.sh  dependencies.txt  interception.cc  libintercept.cc  libintercept.h  nat3.sh  newtest.cc  pcapd.cpp  tester.cc  udstester.cc  util.cc  util.h
blog/: introduction.md
conntrack/: delete.cc  inject.cc
hookffi/: hook.py  hook.rb  hookffi.cc  hookffi.h
include/: conntrack-struct.h  conntrack.h  forgery.h  shambles.h  util.h
include/libforge_socket_override/: libforge_socket.h
notes/: stats1.txt
old/: build-newtest.sh  build-pcapd.sh  build-scan.sh  build-udstester.sh  nat.sh  nat2.sh  oldtester.cc  pcapd.cpp
old/testing/code/: conntrack.h  interception.cc  libintercept.h  tcp.c  test.cc  test2.cc
samples/btscan/: Cargo.toml
samples/btscan/src/: main.rs
samples/btscan/src/binlib/: cli.rs  mod.rs
samples/btscan/src/lib/: conn.rs  data.rs  debug.rs  mod.rs  worker.rs
samples/hookscripts/: Makefile  README.md  hook.py  hook.rb  vulnclient.py
samples/hookscripts/include/: hookffi.h
samples/hookscripts/src/: hookffi.cc
samples/hookscripts_inject/: hook.py  test.c  test.py
samples/hookscripts_inject/include/: hookffi.h
samples/hookscripts_inject/src/: hookffi.cc
samples/scan/: README.md
samples/shambles/: Makefile  README.md
src/: forgery.cc  shambles.cc  shambles_intercept.cc  util.cc
src/conntrack/: delete.cc  inject.cc
src/libforge_socket_override/: libforge_socket.cc
test/inner/: client.py  test.sh  test2.sh  test3.sh  test4.sh
test/outer/: echoserv.py
testing/code/: test2.cc
(+5 files in other folders)
